--- a/main.build_log.htm
+++ b/main.build_log.htm
@@ -7,6 +7,10 @@ C:\Users\Mohamed Amr\Downloads\Teva Project\main.uvproj
 Project File Date:  05/19/2020
 
 <h2>Output:</h2>
+Build target 'Target 1'
+linking...
+Program Size: Code=5032 RO-data=652 RW-data=8 ZI-data=608  
+".\main.axf" - 0 Error(s), 0 Warning(s).
 </pre>
 </body>
 </html>
